# feynmandd

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
circuits/: HTk10.qasm  ghz.qasm  hhi.qasm  inst_4x4_5_0.qasm  inst_5x5_10_0.qasm  random_10_0.qasm  random_iqp-20-200.qasm  sample.qasm
circuits/compare/: mod5d2_70.qasm  mod5d2_70_miss.qasm  mod5d2_70_rev.qasm  mod5d2_70opt1.qasm
circuits/create/: H^20000.qasm  brick_layer.qasm  bv_simple.qasm  chain.qasm  example.qasm  example2.qasm  generate_brick_layer.py  generate_chain.py  generate_two_chain.py  inst_4x4_10_0.qasm  iswap.qasm  simple.qasm  two_chain.qasm
gate_sets/: T.json  default_2.json  google.json
src/: CMakeLists.txt  common.h  global.h  simulator.h  sum_power.h  tensor_network.cpp  tensor_network.h
src/cudd/: adapter.h  circuit_bdd.cpp
test/: CMakeLists.txt  test.cpp
